<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_activity_article">NewsApp - Article</string>
    <string name="article_activity_author">AUTHOR:</string>
    <string name="iv_card_content_description_image">Image of the news response</string>
    <string name="collasping_image">Collasping Image</string>
    <string name="menu_title_about">About the app</string>
    <string name="tv_made_by">Developer</string>
    <string name="iv_card_my_info">My Photo</string>
    <string name="tools_used">Tools Used</string>
    <string name="toolbar_default_text">News</string>
    <string name="title_about_the_app">About the app</string>
    <string name="name_developer">Ezequiel A. Ribeiro</string>
    <string name="mytimes_logo">Logo</string>
    <string name="info_tag">This app is using engine search Google</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_support">developer.android.com/studio</string>
    <string name="notepad">NotePad++</string>
    <string name="notepad_description">notepad-plus-plus.org</string>
    <string name="stackoverflow">Material Designer</string>
    <string name="stackoverflow_description">material.io</string>
    <string name="coffee">Coffee</string>
    <string name="coffee_description">1.5L</string>

    <string name="read_the_full_article">Read the full article</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-0822808376839371/8901462039</string>
    <string name="intersticial_unit_id" translatable="false">ca-app-pub-0822808376839371/6988016074</string>
    <string name="id_ads" translatable="false">ca-app-pub-0822808376839371~9093033720</string>
    <string name="amazon_ad_unit_id" translatable="false">key</string>
    <string name="news_has_arrived_notification">You have new News</string>

    <string-array name="spinner">
        <item>TOP HEADLINES</item>
        <item>LATEST HEADLINES</item>
    </string-array>
    <string name="title_activity_web">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
