<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="view.AboutActivity"
    tools:showIn="@layout/activity_about">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_made_with_love"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:text="@string/tv_made_by"
            android:textAllCaps="false"
            android:textColor="@color/colorDarkBackground"
            android:textSize="14sp" />

        <include layout="@layout/card_info" />

        <TextView
            android:id="@+id/tv_libraries_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:text="@string/tools_used"
            android:textAllCaps="false"
            android:textColor="@color/colorDarkBackground"
            android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView1"
            style="@style/card_layout_about"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info1"
                    style="@style/card_layout_library_name"
                    android:text="@string/android_studio" />

                <TextView
                    android:id="@+id/tv_author1"
                    style="@style/card_layout_library_author"
                    android:layout_below="@id/tv_info1"
                    android:text="@string/android_studio_support"
                    android:textColor="@color/black" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView2"
            style="@style/card_layout_about"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info2"
                    style="@style/card_layout_library_name"
                    android:text="@string/notepad" />

                <TextView
                    android:id="@+id/tv_author2"
                    style="@style/card_layout_library_author"
                    android:layout_below="@id/tv_info2"
                    android:text="@string/notepad_description"
                    android:textColor="@color/black" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView3"
            style="@style/card_layout_about"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info3"
                    style="@style/card_layout_library_name"
                    android:text="@string/stackoverflow" />

                <TextView
                    android:id="@+id/tv_author3"
                    style="@style/card_layout_library_author"
                    android:layout_below="@id/tv_info3"
                    android:text="@string/stackoverflow_description"
                    android:textColor="@color/black" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView4"
            style="@style/card_layout_about"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_info4"
                    style="@style/card_layout_library_name"
                    android:text="@string/coffee" />

                <TextView
                    android:id="@+id/tv_author4"
                    style="@style/card_layout_library_author"
                    android:layout_below="@id/tv_info4"
                    android:text="@string/coffee_description"
                    android:textColor="@color/black" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>