<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal|top"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/marg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ic_launcher_round"
        android:contentDescription="@string/mytimes_logo"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/about_header_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_header_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/info_tag"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="normal" />


</LinearLayout>